More layout bug fixes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -275,8 +275,8 @@ input {
   padding-top: 4px;
   padding-bottom: 4px;
   margin-top: -7px;
-  margin-right: -7px;
-  margin-left: 17px;
+  margin-right: -14px;
+  margin-left: 16px;
 }
 
 .botao_chamado_info {
@@ -284,8 +284,8 @@ input {
   padding-top: 4px;
   padding-bottom: 4px;
   margin-top: -7px;
-  margin-right: -7px;
-  margin-left: 17px;
+  margin-right: -14px;
+  margin-left: 16px;
   background-color: rgb(217, 237, 247);
   border-color: #BCE8F1;
   &:hover{
@@ -304,22 +304,12 @@ input {
 
 .botao_chamado_default {
   float: right;
-  margin-top: -9px;
-  margin-right: -13px;
-  margin-left: 17px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  margin-top: -7px;
+  margin-right: -14px;
+  margin-left: 16px;
   background-color: #f5f5f5;
-}
-
-.lab {
-  background-color: #C0C0C0;
-}
-
-.head{
-  padding-bottom: 12px;
-}
-
-.caput{
-  padding: 9px;
 }
 
 .table > thead > tr > th,
@@ -330,4 +320,13 @@ input {
 .table > tfoot > tr > td {
   text-align: center;
   padding: 6px;
+}
+
+.panel-heading {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.glyphicon {
+  margin-top: -8px;
 }
